--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "refribek-next",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://refribek.com",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-simple-image-slider": "^2.4.1",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2"
   },
